[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Introduce.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/logo/logo_color.png" type="Texture" id=3]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://native/Ball.gd" type="Script" id=5]
[ext_resource path="res://native/Network.gd" type="Script" id=6]
[ext_resource path="res://native/Game.gd" type="Script" id=9]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.5

[node name="Game" type="Node2D"]
script = ExtResource( 9 )

[node name="Network" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Ball" parent="." groups=["bodies"] instance=ExtResource( 4 )]
position = Vector2( 511, 300 )
mass = 21.5327
physics_material_override = SubResource( 1 )
contact_monitor = true
linear_damp = 5.0
script = ExtResource( 5 )

[node name="Introduce" parent="." instance=ExtResource( 2 )]
margin_left = 320.0
margin_top = 200.0
margin_right = 704.0
margin_bottom = 400.0

[node name="logo_color" type="Sprite" parent="Introduce"]
position = Vector2( 192.3, -90.5559 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[connection signal="change_team" from="." to="Network" method="_on_Game_change_team"]
[connection signal="connect_new_player" from="." to="Network" method="_on_Game_connect_new_player"]
[connection signal="ball_move" from="Network" to="Ball" method="_on_Network_ball_move"]
[connection signal="enemy_connected" from="Network" to="." method="_on_Network_enemy_connected"]
[connection signal="enemy_disconnected" from="Network" to="." method="_on_Network_enemy_disconnected"]
[connection signal="player_connected" from="Network" to="." method="_on_Network_player_connected"]
